--- a/src/FoodZone/FoodZone.Web/Areas/Admin/Views/MenuAdmin/Edit.cshtml
+++ b/src/FoodZone/FoodZone.Web/Areas/Admin/Views/MenuAdmin/Edit.cshtml
@@ -34,7 +34,7 @@
     <div class="form-group col-md-6">
         <label class="control-label" for="Menu">Danh mục</label>
         <div class="">
-            @Html.ListBoxFor(model => model.SelectedCategoryIds, Model.Categories, new { @class = "select-multiple", style = "width:100%" })
+            @Html.ListBoxFor(model => model.SelectedCategoryIds, Model.Categories, new { @class = "select-multiple", @required = "required", style = "width:100%" })
         </div>
     </div>
 
