--- a/src/FoodZone/FoodZone.Web/Views/Home/Index.cshtml
+++ b/src/FoodZone/FoodZone.Web/Views/Home/Index.cshtml
@@ -26,14 +26,17 @@
             <div class="col-md-6 col-custom">
                 <div class="collection-content">
                     <div class="section-title text-left">
-                        <span class="section-title-1">Lẩu Đặc Biệt</span>
-                        <h3 class="section-title-3 pb-0">Ưu đãi lớn</h3>
+                        <span class="section-title-1">
+                            Câu chuyện thương hiệu
+                        </span>
+                        <h3 class="section-title-3 pb-0">Tinh hoa ẩm thực</h3>
                     </div>
                     <div class="desc-content">
                         <p>
-                            Sau hàng trăm năm tồn tại trong cuộc sống người Đài, lẩu Đài Loan không chỉ đơn thuần là sự kết hợp của các nguyên liệu quen thuộc, mà liên tục được cải tiến và hoàn thiện, từ thế hệ này sang thế hệ khác. Thực khách đến Manwah
-                            sẽ được tự mình khám phá hành trình ẩm thực đặc sắc với nước lẩu ngọt vị tự nhiên, kết hợp hầm cùng các loại gia vị dậy mùi thơm đặc trưng của Đài Loan. Nét đặc sắc không chỉ đến từ nước lẩu, mà còn đến từ cả những món
-                            nhúng kiểu Đài – bạn sẽ tìm thấy nhiều hơn là chỉ thịt bò và các loại rau thơm. Chính sự kết hợp các nguyên liệu, món ăn hài hoà sẽ tạo nên hương vị lẩu Đài Loan tỉ mỉ và tinh tế..
+                            FoodZone là hệ thống nhà hàng buffet lẩu tại Hà Nội được tin tưởng và đánh giá cao 
+                            về chất lượng và giá cả các set buffet chỉ từ 199K, khách hàng sẽ được thưởng thức tới gần 
+                            50 món ăn từ ba chỉ bò Mỹ, hải sản tổng hợp, khai vị hấp dẫn với gà chiên cay ngọt Hàn Quốc, 
+                            ngao xào, salad cùng vô vàn những món ăn, thức uống hấp dẫn khác.
                         </p>
                     </div>
                     <!-- <a href="shop.html" class="btn flosun-button secondary-btn rounded-0">Shop Collection</a> -->
@@ -44,7 +47,7 @@
                 <div class="single-banner hover-style">
                     <div class="banner-img">
                         <a href="#">
-                            <img src="~/assets/images/collection/food-1.jpg" alt="">
+                            <img src="~/assets/images/collection/food-2.jpg" alt="">
                             <div class="overlay-1"></div>
                         </a>
                     </div>
@@ -68,12 +71,14 @@
             <div class="col-md-6 col-custom order-1 order-md-2">
                 <div class="collection-content">
                     <div class="section-title text-left">
-                        <span class="section-title-1">Lẩu Đặc Biệt</span>
-                        <h3 class="section-title-3 pb-0">Ưu đãi dành cho ngày 1-6</h3>
+                        <span class="section-title-1">
+                            Tinh hoa lẩu Đài Loan
+                        </span>
+                        <h3 class="section-title-3 pb-0">Hương vị lẩu chỉ có tại FoodZone</h3>
                     </div>
                     <div class="desc-content">
                         <p>
-                            Sau hàng trăm năm tồn tại trong cuộc sống người Đài, lẩu Đài Loan không chỉ đơn thuần là sự kết hợp của các nguyên liệu quen thuộc, mà liên tục được cải tiến và hoàn thiện, từ thế hệ này sang thế hệ khác. Thực khách đến Manwah
+                            Sau hàng trăm năm tồn tại trong cuộc sống người Đài, lẩu Đài Loan không chỉ đơn thuần là sự kết hợp của các nguyên liệu quen thuộc, mà liên tục được cải tiến và hoàn thiện, từ thế hệ này sang thế hệ khác. Thực khách đến FoodZone
                             sẽ được tự mình khám phá hành trình ẩm thực đặc sắc với nước lẩu ngọt vị tự nhiên, kết hợp hầm cùng các loại gia vị dậy mùi thơm đặc trưng của Đài Loan. Nét đặc sắc không chỉ đến từ nước lẩu, mà còn đến từ cả những món
                             nhúng kiểu Đài – bạn sẽ tìm thấy nhiều hơn là chỉ thịt bò và các loại rau thơm. Chính sự kết hợp các nguyên liệu, món ăn hài hoà sẽ tạo nên hương vị lẩu Đài Loan tỉ mỉ và tinh tế..
                         </p>
