--- a/src/FoodZone/FoodZone.Web/Areas/Admin/Views/VoucherAdmin/Create.cshtml
+++ b/src/FoodZone/FoodZone.Web/Areas/Admin/Views/VoucherAdmin/Create.cshtml
@@ -42,7 +42,7 @@
         <div class="form-group col-md-6 mt-3">
             @Html.LabelFor(model => model.Level, htmlAttributes: new { @class = "control-label col-md-2" })
             <div>
-                @Html.EditorFor(model => model.Level, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Level, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
                 @Html.ValidationMessageFor(model => model.Level, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -103,5 +103,6 @@
         $("#avatar").change(function () {
             readURL(this);
         });
+        
     </script>
 }
