--- a/src/FoodZone/FoodZone.Web/Views/Manage/Index.cshtml
+++ b/src/FoodZone/FoodZone.Web/Views/Manage/Index.cshtml
@@ -33,6 +33,7 @@
                                     <div class="myaccount-content">
                                         <h3>Thông tin tài khoản</h3>
                                         <div class="account-details-form">
+                                        <div class="flex-fill">@ViewBag.UpdateStatus</div> 
                                             <form action="@Url.Action("Index", "Manage", new {area=""})" method="post">
                                                 <div class="row">
                                                     @Html.AntiForgeryToken()
