--- a/src/FoodZone/FoodZone.Web/Views/Reservation/Index.cshtml
+++ b/src/FoodZone/FoodZone.Web/Views/Reservation/Index.cshtml
@@ -25,48 +25,48 @@
                                 <div class="col mt-3">
                                     <div class="col-md-12 col-custom">
                                         <div class="input-item mb-4">
-                                            <div class="title-booking">Tên khách hàng</div>
+                                            <div class="title-booking font-weight-bold">Tên khách hàng</div>
                                             @Html.TextBoxFor(m => m.CusName, new { @class = "form-control", @readonly = "readonly", @placeholder = "Tên" })
                                         </div>
                                     </div>
                                     <div class="col-md-12 col-custom">
                                         <div class="input-item mb-4">
-                                            <div class="title-booking">Số điện thoại</div>
+                                            <div class="title-booking font-weight-bold">Số điện thoại</div>
                                             @Html.TextBoxFor(m => m.PhoneNumber, new { @class = "form-control", @readonly = "readonly", @placeholder = "Số điện thoại" })
                                         </div>
                                     </div>
                                     <div class="col-12 col-custom">
                                         <div class="input-item mb-4">
-                                            <div class="title-booking">Chọn Combo</div>
+                                            <div class="title-booking font-weight-bold">Chọn Combo</div>
                                             @Html.DropDownList("MenuId", null, htmlAttributes: new { @class = "form-select select-single w-50" })
                                             @Html.ValidationMessageFor(model => model.MenuId, "", new { @class = "text-danger" })
                                         </div>
                                     </div>
                                     <div class="col-md-12 col-custom">
                                         <div class="input-item mb-4">
-                                            <div class="title-booking">Thời gian dùng bữa</div>
-                                            @if (now.Hour > 21)
+                                            <div class="title-booking font-weight-bold">Thời gian dùng bữa</div>
+                                            @if (now.Hour >= 21)
                                             {
-                                                <input class="border-0 rounded-0 w-100 input-area email gray-bg text-box single-line" data-val="true" data-val-required="Ngày đặt bàn không được bỏ trống" disabled="disabled" id="ReservationDate" name="ReservationDate" type="text" value="@nextDate.ToShortDateString()">
+                                                <input class="border-0 rounded-0 w-100 input-area email gray-bg text-box single-line" disabled="disabled" id="ReservationDate" name="ReservationDate" type="text" value="@nextDate.ToShortDateString()">
                                             }
                                             else
                                             {
-                                                @Html.EditorFor(m => m.ReservationDate, new { htmlAttributes = new { @class = "border-0 rounded-0 w-100 input-area email gray-bg", @disabled = "disabled" } })
+                                                <input class="border-0 rounded-0 w-100 input-area email gray-bg text-box single-line" disabled="disabled" id="ReservationDate" name="ReservationDate" type="text" value="@Model.ReservationDate">
                                             }
                                         </div>
                                     </div>
                                     <div class="col-12 col-custom">
                                         <div class="input-item mb-4 display-flex-col">
 
-                                            <div class="title-booking">Chọn thời gian đến</div>
+                                            <div class="title-booking font-weight-bold">Chọn thời gian đến</div>
                                             <div id="menu" style="position: relative; width:100%">
                                                 <ul class="nav nav-tabs nav-menu-custom nav-tabs-floor-booking " style="margin-left:6% ; max-height: 60px; width: 88%; flex-wrap: unset ; overflow-x: hidden">
 
-                                                    @if (now.Hour <= 14)
+                                                    @if (now.Hour <= 14 || now.Hour >= 21)
                                                     {
                                                         for (int i = 11; i < 14; i++)
                                                         {
-                                                            if (i >= now.Hour || now.Hour >=21)
+                                                            if (i >= now.Hour || now.Hour >= 21)
                                                             {
                                                                 if (i == now.Hour)
                                                                 {
@@ -77,7 +77,7 @@
                                                                         {
                                                                             <li class="nav-item mr-2 p-1">
                                                                                 <input class="form-check-input input-custom-table" name="Time" type="radio" id="@i@j" value="@i:@j">
-                                                                                <label class="form-check-label label-time " for="@i@j">@i:@j </label>
+                                                                                <label class="form-check-label label-time " for="@i@j">@i:@(j == 0 ? "00" : j.ToString()) </label>
                                                                             </li>
                                                                         }
 
@@ -89,7 +89,7 @@
                                                                     {
                                                                         <li class="nav-item mr-2 p-1">
                                                                             <input class="form-check-input input-custom-table" name="Time" type="radio" id="@i@j" value="@i:@j">
-                                                                            <label class="form-check-label label-time" for="@i@j">@i:@j </label>
+                                                                            <label class="form-check-label label-time" for="@i@j">@i:@(j == 0 ? "00" : j.ToString()) </label>
                                                                         </li>
                                                                     }
                                                                 }
@@ -101,7 +101,7 @@
                                                     {
                                                         for (int i = 18; i < 21; i++)
                                                         {
-                                                            if (i >= now.Hour)
+                                                            if (i >= now.Hour || now.Hour >= 14)
                                                             {
                                                                 if (i == now.Hour)
                                                                 {
@@ -112,7 +112,7 @@
                                                                         {
                                                                             <li class="nav-item mr-2 p-1">
                                                                                 <input class="form-check-input input-custom-table" name="Time" type="radio" id="@i@j" value="@i:@j">
-                                                                                <label class="form-check-label label-time" for="@i@j">@i:@j </label>
+                                                                                <label class="form-check-label label-time" for="@i@j">@i:@(j == 0 ? "00" : j.ToString()) </label>
                                                                             </li>
                                                                         }
 
@@ -124,7 +124,7 @@
                                                                     {
                                                                         <li class="nav-item mr-2 p-1">
                                                                             <input class="form-check-input input-custom-table" name="Time" type="radio" id="@i@j" value="@i:@j">
-                                                                            <label class="form-check-label label-time" for="@i@j">@i:@j </label>
+                                                                            <label class="form-check-label label-time" for="@i@j">@i:@(j == 0 ? "00" : j.ToString()) </label>
                                                                         </li>
                                                                     }
                                                                 }
@@ -143,25 +143,22 @@
                                     </div>
                                     <div class="col-12 col-custom">
                                         <div class="input-item mb-4">
-                                            <div class="title-booking">Mã ưu đãi của bạn</div>
+                                            <div class="title-booking font-weight-bold">Mã ưu đãi của bạn</div>
                                             @Html.DropDownList("CodeId", null, htmlAttributes: new { @class = "form-select select-single w-50" })
                                             @Html.ValidationMessageFor(model => model.CodeId, "", new { @class = "text-danger" })
                                         </div>
                                     </div>
                                     <div class="col-md-12 col-custom">
                                         <div class="input-item mb-4">
-                                            <div class="title-booking">Ghi chú thêm cho nhà hàng: </div>
-                                            @Html.TextAreaFor(m => m.Note, new { @class = "border-0 rounded-0 w-100 input-area name gray-bg" })
+                                            <div class="title-booking font-weight-bold">Ghi chú thêm cho nhà hàng: </div>
+                                            @Html.TextAreaFor(m => m.Note, new { @class = "border-0 rounded-0 w-100 input-area name gray-bg", @placeholder = "Yêu cầu nhà hàng làm gì đó đặc biệt cho bạn" })
                                         </div>
                                     </div>
                                     <div class="col-12 col-custom mt-40">
-                                        @*@if (DateTime.Now.Hour <= 22)
-                                            {*@
                                         <button type="submit" id="submit" name="submit" class="btn flosun-button secondary-btn theme-color rounded-0">
                                             Đặt
                                             bàn
                                         </button>
-                                        }
                                     </div>
                                 </div>
                             </div>
@@ -193,8 +190,9 @@
         #prev {
             position: absolute;
             left: 0;
-            background-color: #ceaaaa;
+            background-color: #CB2D26;
             padding: 5px;
+            color: white;
             cursor: pointer;
             top: 5px;
             border-radius: 1rem;
@@ -203,7 +201,8 @@
         #next {
             position: absolute;
             right: 0;
-            background-color: #ceaaaa;
+            color: white;
+            background-color: #CB2D26;
             padding: 5px;
             cursor: pointer;
             top: 5px;
