--- a/src/FoodZone/FoodZone.Web/Views/Manage/ChangePassword.cshtml
+++ b/src/FoodZone/FoodZone.Web/Views/Manage/ChangePassword.cshtml
@@ -1,41 +1,41 @@
 ﻿@model ChangePasswordViewModel
 @{
-    ViewBag.Title = "Change Password";
+    ViewBag.Title = "Thay đổi mật khẩu";
 }
 
-<h2>@ViewBag.Title.</h2>
+<div class="login-register-area mt-5">
+    <div class="container custom-area">
+        <div class="row">
+            <div class="col-lg-6 offset-lg-3 col-md-8 offset-md-2 col-custom">
+                <div class="login-register-wrapper">
+                    <div class="section-content text-center mb-5">
+                        <h2 class="title-4 mb-2">Thay đổi mật khẩu</h2>
+                    </div>
+                    @using (Html.BeginForm("ChangePassword", "Manage", FormMethod.Post, new { role = "form" }))
+                    {
+                        @Html.AntiForgeryToken()
+                        @Html.ValidationSummary("", new { @class = "text-danger" })
+                        <div class="single-input-item mb-3">
+                            <input type="password" name="OldPassword" placeholder="Mật khẩu cũ">
+                        </div>
+                        <div class="single-input-item mb-3">
+                            <input type="password" name="NewPassword" placeholder="Mật khẩu mới">
+                        </div>
 
-@using (Html.BeginForm("ChangePassword", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-{
-    @Html.AntiForgeryToken()
-    <h4>Change Password Form</h4>
-    <hr />
-    @Html.ValidationSummary("", new { @class = "text-danger" })
-    <div class="form-group">
-        @Html.LabelFor(m => m.OldPassword, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.PasswordFor(m => m.OldPassword, new { @class = "form-control" })
-        </div>
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.NewPassword, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.PasswordFor(m => m.NewPassword, new { @class = "form-control" })
-        </div>
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
-        </div>
-    </div>
+                        <div class="single-input-item mb-3">
+                            <input type="password" name="ConfirmPassword" placeholder="Xác nhận mật khẩu">
+                        </div>
 
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Change password" class="btn btn-info" />
+                        <div class="single-input-item mb-3" style="text-align:center">
+                            <button class="btn flosun-button secondary-btn theme-color rounded-0">Xác nhận</button>
+                        </div>
+                    }
+                </div>
+            </div>
         </div>
     </div>
-}
+</div>
+
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
