--- a/src/FoodZone/FoodZone.Web/Areas/Identity/Views/Shared/_LayoutAdmin.cshtml
+++ b/src/FoodZone/FoodZone.Web/Areas/Identity/Views/Shared/_LayoutAdmin.cshtml
@@ -77,6 +77,12 @@
                 </a>
             </li>
             <li class="nav-item">
+                <a class="nav-link" href="@Url.Action("StaffList", "UsersAdmin", new {area="identity"})">
+                    <i class="fas fa-fw fa-table"></i>
+                    <span>Danh sách nhân viên</span>
+                </a>
+            </li>
+            <li class="nav-item">
                 <a class="nav-link" href="@Url.Action("Index", "RolesAdmin", new {area="identity"})">
                     <i class="fas fa-fw fa-table"></i>
                     <span>Quản lý chức vụ</span>
