--- a/src/FoodZone/FoodZone.Web/Views/Reservation/_Reservations.cshtml
+++ b/src/FoodZone/FoodZone.Web/Views/Reservation/_Reservations.cshtml
@@ -3,7 +3,7 @@
     int j = 1;
 }
 
-<div class="tab-pane fade show active" id="orders" role="tabpanel">
+<div class="tab-pane fade" id="orders" role="tabpanel">
     <div class="myaccount-content">
         <h3>Đơn đặt bàn</h3>
         <div class="myaccount-table table-responsive text-center">
