--- a/src/FoodZone/FoodZone.Web/Views/Home/About.cshtml
+++ b/src/FoodZone/FoodZone.Web/Views/Home/About.cshtml
@@ -48,7 +48,7 @@
                 <div class="grid-item">
                     <div class="ht-team-member">
                         <div class="team-image">
-                            <img class="img-fluid" src="~/Assets/images/team/1.jpg" alt="">
+                            <img class="img-fluid img-user-customer" src="~/Assets/images/team/1.jpg" alt="">
                             <div class="social-networks">
                                 <div class="inner">
                                     <a href="#">
@@ -65,7 +65,7 @@
                         </div>
                         <div class="team-info text-center">
                             <h5 class="name">Nguyễn Quang</h5>
-                            <div class="position">Coder</div>
+                            <div class="position">Back-end Coder</div>
                         </div>
                     </div>
                 </div>
@@ -74,7 +74,7 @@
                 <div class="grid-item">
                     <div class="ht-team-member">
                         <div class="team-image">
-                            <img class="img-fluid" src="~/Assets/images/team/2.jpg" alt="">
+                            <img class="img-fluid img-user-customer" src="~/Assets/images/team/2.jpg" alt="">
                             <div class="social-networks">
                                 <div class="inner">
                                     <a href="#">
@@ -91,7 +91,7 @@
                         </div>
                         <div class="team-info text-center">
                             <h5 class="name">Hoàng Anh</h5>
-                            <div class="position">Coder</div>
+                            <div class="position">Project Manager</div>
                         </div>
                     </div>
                 </div>
@@ -100,7 +100,7 @@
                 <div class="grid-item">
                     <div class="ht-team-member">
                         <div class="team-image">
-                            <img class="img-fluid" src="~/Assets/images/team/3.jpg" alt="">
+                            <img class="img-fluid img-user-customer" src="~/Assets/images/team/3.jpg" alt="">
                             <div class="social-networks">
                                 <div class="inner">
                                     <a href="#">
@@ -126,7 +126,7 @@
                 <div class="grid-item">
                     <div class="ht-team-member">
                         <div class="team-image">
-                            <img class="img-fluid" src="~/Assets/images/team/4.jpg" alt="">
+                            <img class="img-fluid img-user-customer" src="~/Assets/images/team/4.jpg" alt="">
                             <div class="social-networks">
                                 <div class="inner">
                                     <a href="#">
@@ -143,7 +143,7 @@
                         </div>
                         <div class="team-info text-center">
                             <h5 class="name">Nguyễn Phú Đức</h5>
-                            <div class="position">Document</div>
+                            <div class="position">Documenter</div>
                         </div>
                     </div>
                 </div>
@@ -152,7 +152,7 @@
                 <div class="grid-item">
                     <div class="ht-team-member">
                         <div class="team-image">
-                            <img class="img-fluid" src="/Assets/images/team/5.jpg" alt="">
+                            <img class="img-fluid img-user-customer" src="/Assets/images/team/5.jpg" alt="">
                             <div class="social-networks">
                                 <div class="inner">
                                     <a href="#">
@@ -169,7 +169,7 @@
                         </div>
                         <div class="team-info text-center">
                             <h5 class="name">Vũ Hưng</h5>
-                            <div class="position">Document</div>
+                            <div class="position">Front-end Coder</div>
                         </div>
                     </div>
                 </div>
