--- a/src/FoodZone/FoodZone.Web/Areas/Admin/Views/CategoryAdmin/Create.cshtml
+++ b/src/FoodZone/FoodZone.Web/Areas/Admin/Views/CategoryAdmin/Create.cshtml
@@ -25,7 +25,7 @@
         </div>
 
         <div class="form-group col-md-6 mt-3">
-            <div> <img id="showImage" src="~/assets/images/@Model.Image" class="img-home form-control w-100 h-100 bg-light mr-2" alt=""></div>
+            <div> <img id="showImage" src="~/assets/images/category/@Model.Image" class="img-home form-control w-100 h-100 bg-light mr-2" alt=""></div>
             <input type="file" class="form-control" id="avatar" name="uploadImage" />
         </div>
 
