--- a/src/FoodZone/FoodZone.Web/Areas/Admin/Views/FoodAdmin/Create.cshtml
+++ b/src/FoodZone/FoodZone.Web/Areas/Admin/Views/FoodAdmin/Create.cshtml
@@ -19,7 +19,9 @@
 
         <div class="form-group col-md-6">
             Giá
-            @Html.EditorFor(model => model.Price, new { htmlAttributes = new { @class = "form-control", @placeholder = "Giá" } })
+            <input class="form-control text-box single-line" data-val="true"
+                   data-val-range="Vui lòng nhập giá trị lớn hơn 1" data-val-range-max="1000000000000" data-val-range-min="1"
+                   data-val-required="Giá không được bỏ trống" id="Price" name="Price" placeholder="Giá" type="number" value="0">
             @Html.ValidationMessageFor(model => model.Price, "", new { @class = "text-danger" })
         </div>
 
