--- a/src/FoodZone/FoodZone.Web/Areas/Admin/Views/VoucherAdmin/Create.cshtml
+++ b/src/FoodZone/FoodZone.Web/Areas/Admin/Views/VoucherAdmin/Create.cshtml
@@ -29,6 +29,7 @@
                 @Html.EditorFor(model => model.Code, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Code, "", new { @class = "text-danger" })
             </div>
+            
         </div>
 
         <div class="form-group col-md-6 mt-3">
@@ -42,8 +43,15 @@
         <div class="form-group col-md-6 mt-3">
             @Html.LabelFor(model => model.Level, htmlAttributes: new { @class = "control-label col-md-2" })
             <div>
-                @Html.EditorFor(model => model.Level, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
-                @Html.ValidationMessageFor(model => model.Level, "", new { @class = "text-danger" })
+                <select class="custom-select" name="Level" id="inputGroupSelect01">
+               
+                    <option value="0">Level 0: Người dùng mới</option>
+                    <option value="1">Level 1: Người dùng đặt hơn 1 bàn</option>
+                    <option value="15">Level 2: Người dùng đặt hơn 15 bàn</option>
+                    <option value="30">Level 3: Người dùng đặt hơn 30 bàn</option>
+                    <option value="50">Level 4: Người dùng đặt hơn 50 bàn</option>
+                    <option value="80">Level 5: Người dùng đặt hơn 80 bàn</option>
+                </select>
             </div>
         </div>
 
