--- a/src/FoodZone/FoodZone.Web/Areas/Admin/Views/VoucherAdmin/Edit.cshtml
+++ b/src/FoodZone/FoodZone.Web/Areas/Admin/Views/VoucherAdmin/Edit.cshtml
@@ -43,8 +43,14 @@
         <div class="form-group col-md-6 mt-3">
             @Html.LabelFor(model => model.Level, htmlAttributes: new { @class = "control-label col-md-2" })
             <div>
-                @Html.EditorFor(model => model.Level, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Level, "", new { @class = "text-danger" })
+                <select class="custom-select" name="Level" id="inputGroupSelect01" >
+                    <option value="0" @(Model.Level == 0? "selected":"")>Level 0: Người dùng mới</option>
+                    <option value="1" @(Model.Level == 1? "selected":"")>Level 1: Người dùng đặt hơn 1 bàn</option>
+                    <option value="15" @(Model.Level == 15? "selected":"")>Level 2: Người dùng đặt hơn 15 bàn</option>
+                    <option value="30" @(Model.Level == 30? "selected":"")>Level 3: Người dùng đặt hơn 30 bàn</option>
+                    <option value="50" @(Model.Level == 50? "selected":"")>Level 4: Người dùng đặt hơn 50 bàn</option>
+                    <option value="80" @(Model.Level == 80? "selected":"")>Level 5: Người dùng đặt hơn 80 bàn</option>
+                </select>
             </div>
         </div>
 
