--- a/src/FoodZone/FoodZone.Web/Assets/css/style.css
+++ b/src/FoodZone/FoodZone.Web/Assets/css/style.css
@@ -499,7 +499,7 @@ mark {
 
 .section-title .section-title-3 {
     font-size: 36px;
-    font-family: "Josefin Slab", serif;
+    font-family:"Quicksand";
     font-weight: 700;
     margin-bottom: 0px;
     padding-bottom: 25px;
@@ -551,7 +551,7 @@ mark {
 
 .section-title .section-title-large {
     font-size: 80px;
-    font-family: "Josefin Slab", serif;
+    font-family:"QuickSand";
     font-weight: 600;
 }
 
@@ -8038,6 +8038,14 @@ input#count {
         font-weight: bold;
         cursor: pointer;
         width: 100%;
+    }
+
+
+    .img-user-customer{
+        max-width: 350px;
+        max-height: 350px;
+        min-width: 350px;
+        min-height: 350px;
     }
 /* Modified from: https://github.com/mukulkant/Star-rating-using-pure-css */
 
