--- a/src/FoodZone/FoodZone.Web/Areas/Identity/Views/RolesAdmin/Index.cshtml
+++ b/src/FoodZone/FoodZone.Web/Areas/Identity/Views/RolesAdmin/Index.cshtml
@@ -29,8 +29,8 @@
                                     <a class="btn btn-primary btn-icon-split btn-sm" href="@Url.Action("Edit", "RolesAdmin", new { id = item.Id })">
                                         <span class="text">Sửa</span>
                                     </a>
-                                    <button type="submit"  data-toggle="modal" data-target="#deleteTable" onclick="deleteRole(@item.Id)"
-                                            @*onclick="return confirm('Bạn có muốn xóa @item.Name này?')"*@
+                                    <button type="submit"  data-toggle="modal" 
+                                            onclick="return confirm('Bạn có muốn xóa @item.Name này?')"
                                             class="btn btn-primary btn-icon-split btn-sm"><span class="text">Xoá</span></button>
                                 </form>
                             </td>
