--- a/src/FoodZone/FoodZone.Web/Views/Reservation/Details.cshtml
+++ b/src/FoodZone/FoodZone.Web/Views/Reservation/Details.cshtml
@@ -54,7 +54,7 @@
                         }
                     </div>
                     <div class="cart-update mt-sm-16">
-                        <a href="@Url.Action("Index","Manage", new {area=""})" class="btn flosun-button primary-btn rounded-0 black-btn">Quay lại</a>
+                        <a href="@Url.Action("History","Reservation", new {area=""})" class="btn flosun-button primary-btn rounded-0 black-btn">Quay lại</a>
                     </div>
                 </div>
             </div>
