--- a/src/FoodZone/FoodZone.Web/Views/Reservation/Index.cshtml
+++ b/src/FoodZone/FoodZone.Web/Views/Reservation/Index.cshtml
@@ -62,9 +62,9 @@
                                             <div id="menu" style="position: relative; width:100%">
                                                 <ul class="nav nav-tabs nav-menu-custom nav-tabs-floor-booking " style="margin-left:6% ; max-height: 60px; width: 88%; flex-wrap: unset ; overflow-x: hidden">
 
-                                                    @if (now.Hour <= 13 || now.Hour >= 21)
+                                                    @if (now.Hour <= 12 || now.Hour >= 21)
                                                     {
-                                                        for (int i = 11; i < 14; i++)
+                                                        for (int i = 11; i <= 12; i++)
                                                         {
                                                             if (i >= now.Hour || now.Hour >= 21)
                                                             {
@@ -73,6 +73,8 @@
 
                                                                     for (int j = 0; j < 60; j += 15)
                                                                     {
+
+
                                                                         if (j > now.Minute)
                                                                         {
                                                                             <li class="nav-item mr-2 p-1">
@@ -82,6 +84,13 @@
                                                                         }
 
                                                                     }
+                                                                }
+                                                                else if (i == 12)
+                                                                {
+                                                                    <li class="nav-item mr-2 p-1">
+                                                                        <input class="form-check-input input-custom-table" name="Time" type="radio" id="@(i)00" value="@i:00">
+                                                                        <label class="form-check-label label-time" for="@(i)00">@i:00 </label>
+                                                                    </li>
                                                                 }
                                                                 else
                                                                 {
@@ -99,7 +108,7 @@
                                                     }
                                                     else
                                                     {
-                                                        for (int i = 18; i < 21; i++)
+                                                        for (int i = 19; i <= 20; i++)
                                                         {
                                                             if (i >= now.Hour || now.Hour >= 14)
                                                             {
@@ -117,6 +126,13 @@
                                                                         }
 
                                                                     }
+                                                                }
+                                                                else if (i == 20)
+                                                                {
+                                                                    <li class="nav-item mr-2 p-1">
+                                                                        <input class="form-check-input input-custom-table" name="Time" type="radio" id="@(i)00" value="@i:00">
+                                                                        <label class="form-check-label label-time" for="@(i)00">@i:00 </label>
+                                                                    </li>
                                                                 }
                                                                 else
                                                                 {
@@ -249,7 +265,7 @@
                 refreshTable();
             };
         });
- 
+
         function refreshTable() {
             $.ajax({
                 url: '/Table/GetAll',
